--- a/pandas/Notebooks/Untitled.ipynb
+++ b/pandas/Notebooks/Untitled.ipynb
@@ -2,117 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a207cc9d-9f89-4f27-862d-3445f17f6740",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     True\n",
-       "1    False\n",
-       "2     True\n",
-       "3    False\n",
-       "4     True\n",
-       "5    False\n",
-       "6     True\n",
-       "7    False\n",
-       "8     True\n",
-       "9    False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "t = pd.Series([True if i%2 ==0 else False for i in range(10)])\n",
-    "f = pd.Series([True for i in range(10)])\n",
-    "\n",
-    "t & f\n",
-    "t | f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b40ad2ab-e2b3-43ab-8e25-93c20e2f552f",
+   "execution_count": 20,
+   "id": "aa7d76be-d6e9-4111-8e04-daf1cdcb9921",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = pd.Series([True for i in range(10)])"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "oil_url = 'https://andybek.com/pandas-oil'\n",
+    "brent = pd.read_csv(oil_url, index_col='Date', parse_dates=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "229bae40-7ce6-47b4-ae6c-26d582ec2f3d",
+   "execution_count": 21,
+   "id": "4d4b5e70-b030-4d8d-91b5-10d994bbd70b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>23.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>23.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>23.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>23.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-10</th>\n",
+       "      <td>22.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-24</th>\n",
+       "      <td>64.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-25</th>\n",
+       "      <td>62.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26</th>\n",
+       "      <td>62.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-27</th>\n",
+       "      <td>62.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-30</th>\n",
+       "      <td>60.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5016 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0    True\n",
-       "1    True\n",
-       "2    True\n",
-       "3    True\n",
-       "4    True\n",
-       "5    True\n",
-       "6    True\n",
-       "7    True\n",
-       "8    True\n",
-       "9    True\n",
-       "dtype: bool"
+       "            Price\n",
+       "Date             \n",
+       "2000-01-04  23.95\n",
+       "2000-01-05  23.72\n",
+       "2000-01-06  23.55\n",
+       "2000-01-07  23.35\n",
+       "2000-01-10  22.77\n",
+       "...           ...\n",
+       "2019-09-24  64.13\n",
+       "2019-09-25  62.41\n",
+       "2019-09-26  62.08\n",
+       "2019-09-27  62.48\n",
+       "2019-09-30  60.99\n",
+       "\n",
+       "[5016 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b0d93ad5-569a-4e27-8c56-34d4d85c39c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     True\n",
-       "1    False\n",
-       "2     True\n",
-       "3    False\n",
-       "4     True\n",
-       "5    False\n",
-       "6     True\n",
-       "7    False\n",
-       "8     True\n",
-       "9    False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t & f"
+    "brent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a7ca97-4cea-42a4-a3a3-49c2f2a6160c",
+   "id": "0cb6a515-286f-426b-b852-32c3ba12c498",
    "metadata": {},
    "outputs": [],
    "source": []
