--- a/ML/Notebooks/Coursera Advanced Learning Algorythms/Week1/practice.ipynb
+++ b/ML/Notebooks/Coursera Advanced Learning Algorythms/Week1/practice.ipynb
@@ -243,6 +243,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[200., 17, 90]])\n",
+    "layer_1 = Dense(units=2, activation='sigmoid')\n",
+    "layer_1(x).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 0.9255483 ,  0.8510989 ],\n",
+       "        [-0.33316618, -0.3046885 ],\n",
+       "        [ 0.93945265,  0.02380919]], dtype=float32),\n",
+       " array([0., 0.], dtype=float32)]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer_1.get_weights()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
