Add week 2 lab 2

--- a/ML/Notebooks/Coursera Unsupervised Learning, Recommenders, Reinforcement Learning/Week2/Lab2/C3_W2_RecSysNN_Assignment.ipynb
+++ b/ML/Notebooks/Coursera Unsupervised Learning, Recommenders, Reinforcement Learning/Week2/Lab2/C3_W2_RecSysNN_Assignment.ipynb
@@ -314,16 +314,18 @@
     "tf.random.set_seed(1)\n",
     "user_NN = tf.keras.models.Sequential([\n",
     "    ### START CODE HERE ###     \n",
-    "  \n",
-    "  \n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(num_outputs, activation='linear')\n",
     "  \n",
     "    ### END CODE HERE ###  \n",
     "])\n",
     "\n",
     "item_NN = tf.keras.models.Sequential([\n",
     "    ### START CODE HERE ###     \n",
-    "  \n",
-    "  \n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dense(num_outputs, activation='linear')\n",
     "  \n",
     "    ### END CODE HERE ###  \n",
     "])\n",
@@ -639,7 +641,7 @@
     "      d (float) : distance\n",
     "    \"\"\"\n",
     "    ### START CODE HERE ###     \n",
-    "    \n",
+    "    d = np.sum(np.square(a - b))\n",
     "    ### END CODE HERE ###     \n",
     "    return d"
    ]
